tests/errors/dict_binary_op.experr
does not support this binary operator
